apps/prod/esphome/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esphome
spec:
  serviceName: esphome
  volumeClaimTemplates:
    - metadata:
        name: esphome-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 512Mi
