apps/prod/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
spec:
  rules:
    - host: esphome.prod.gsdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esphome-svc
                port:
                  number: 80
